fix(css): Fix text overflow in sidebar
Identified by my mom, on certain screen sizes, the words "Free Law
Project" became "Free Law Projec"
"t"

With a hanging t. That's lame. This fixes it.

--- a/content/css/custom.css
+++ b/content/css/custom.css
@@ -88,6 +88,10 @@ a.anchor, a.anchor:focus, a.anchor:hover {
     border-bottom: 0;
 }
 
+#sidebar {
+    word-break: normal;
+}
+
 /* Tweaks for various screens */
 @media screen and (max-width: 767px) {
     #banner {
